tests/samples/negative/error_handling/try_result_error_mismatch.ax
module try_result_error_mismatch;

enum ResultI32I32: u8 {
    ok(i32) = 1,
    err(i32) = 2,
}

enum ResultI32Bool: u8 {
    ok(i32) = 1,
    err(bool) = 2,
}

fn parse() -> ResultI32I32 {
    return ResultI32I32.ok(1);
}

fn use_value() -> ResultI32Bool {
    let value: i32 = parse()?;
    return ResultI32Bool.ok(value);
}

fn main() -> i32 {
    return 0;
}
